# codebility-assessment

./: README.md
fullstack/: Makefile  docker-compose.traefik.yml  docker-compose.yml
fullstack/api/: main.py  pyproject.toml
fullstack/backend/: .gitignore  alembic.ini  pyproject.toml
fullstack/backend/alembic/: env.py
fullstack/backend/alembic/versions/: 867b27b84588_add_produts_and_cart_tables.py  ce5cc6b1567b_add_users_table_from_fastapi_users.py  f5b8887e4efd_modify_products_table_add_price_and_.py
fullstack/backend/app/: exceptions.py  main.py  schemas.py
fullstack/backend/app/api/v1/: cart.py  carts.py  products.py  router.py  users.py
fullstack/backend/app/core/: config.py  engine.py  users.py
fullstack/backend/app/models/: products.py
fullstack/backend/app/repository/: carts.py  models.py  products.py
fullstack/backend/app/services/: cart.py  products.py
fullstack/web/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
fullstack/web/app/: page.tsx  types.ts
fullstack/web/app/components/: product-card.tsx  product-list.tsx
